# PLT

./: README.md
1lab/: CMakeLists.txt  mainwindow.ui
1lab/src/: mainwindow.cpp  mainwindow.h
3lab/: __main__.py
3lab/app/: __main__.py
3lab/app/cli/: __init__.py
3lab/app/dfa/: DFA.py  __init__.py  util.py
3lab/app/gui/: __init__.py  mainwindow.py
3lab/app/util/: DfaLoggingEvent.py  DfaLoggingList.py  __init__.py
3lab/resources/: dfa1.json  dfa2.json  mainwindow.ui
